src/test/ui/transmutability/unions/should_reject_disjoint.stderr
error[E0277]: the trait bound `B: BikeshedIntrinsicFrom<A, assert::Context, false, false, true, true>` is not satisfied
  --> $DIR/should_reject_disjoint.rs:34:40
   |
LL |     assert::is_maybe_transmutable::<A, B>();
   |                                        ^ the trait `BikeshedIntrinsicFrom<A, assert::Context, false, false, true, true>` is not implemented for `B`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_reject_disjoint.rs:13:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this
LL |     where
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, false, false, true, true>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error[E0277]: the trait bound `A: BikeshedIntrinsicFrom<B, assert::Context, false, false, true, true>` is not satisfied
  --> $DIR/should_reject_disjoint.rs:35:40
   |
LL |     assert::is_maybe_transmutable::<B, A>();
   |                                        ^ the trait `BikeshedIntrinsicFrom<B, assert::Context, false, false, true, true>` is not implemented for `A`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_reject_disjoint.rs:13:14
   |
LL |     pub fn is_maybe_transmutable<Src, Dst>()
   |            --------------------- required by a bound in this
LL |     where
LL |         Dst: BikeshedIntrinsicFrom<Src, Context, false, false, true, true>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_maybe_transmutable`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
